--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My page</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon1.png" />
+    <link rel="stylesheet" href="./css/app.css">
+    <title>Ankit Singh - Portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
   </head>
